# AI-E-book-Generator

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  README.md  UPDATE.md  UPDATE2.md  UPDATE3.md  docker-compose.yml  engine.spec  index.html  package-lock.json  package.json  vite.config.ts
backend/: .env.example  .gitignore  Dockerfile  requirements.txt
backend/app/: auth.py  database.py  engine.py  main.py
backend/app/models/: book.py  chat.py  setting.py
backend/app/routers/: books.py  chats.py  credits.py  settings.py
backend/app/schemas/: book.py
backend/app/services/: config.py  extract.py  generator.py  images.py  llm.py  search.py  ws_manager.py
backend/tests/: conftest.py  test_auth.py  test_books.py  test_chats.py  test_engine.py  test_extract.py  test_generator_events.py  test_images.py  test_knowledge.py  test_llm_factory.py  test_settings_wiring.py
docs/superpowers/plans/: 2026-07-05-main-page.md  2026-07-16-tauri-desktop-phase1.md
docs/superpowers/specs/: 2026-07-05-main-page-design.md  2026-07-15-tauri-desktop-migration-design.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/(app)/: layout.module.css  layout.tsx
frontend/components/book-card/: book-card.module.css  book-card.tsx
frontend/components/topbar/: topbar.tsx
frontend/lib/: api.ts  types.ts
frontend/styles/: globals.css
nginx/: nginx.conf
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  engine.rs  lib.rs  state.rs
src/lib/: api.ts  engine.ts  types.ts
src/styles/: globals.css
(+36 files in other folders)
